#ifndef MAINTYPE_H
#define MAINTYPE_H

#include "AbstractNode.h"

namespace AST {
    class MainType : public AbstractNode
    {
    public:
        MainType();
    };
}


#endif // MAINTYPE_H
